--- a/Conda-env/environment.yml
+++ b/Conda-env/environment.yml
@@ -1,4 +1,4 @@
-name: py35v3
+name: experiment_env
 channels:
   - conda-forge/label/gcc7
   - r
@@ -184,6 +184,7 @@ dependencies:
   - pyzmq=17.1.2=py35h1de35cc_0
   - qt=5.6.2=h822fa55_1013
   - qtconsole=4.3.1=py35hd6d667b_0
+  - r-abind=1.4_5=r351h6115d3f_1001
   - r-acepack=1.4.1=r351hfffe0aa_1002
   - r-amap=0.8_16=r351hbe7ee20_1000
   - r-assertthat=0.2.1=r351h6115d3f_0
@@ -199,23 +200,37 @@ dependencies:
   - r-bit64=0.9_7=r351h46e59ec_1000
   - r-bitops=1.0_6=r351h46e59ec_1002
   - r-blob=1.1.1=r351_1001
+  - r-boot=1.3_22=r351_0
   - r-brew=1.0_6=r351hf348343_4
+  - r-car=3.0_3=r35h6115d3f_0
+  - r-cardata=3.0_2=r351h6115d3f_0
   - r-catools=1.17.1.2=r351h466af19_0
+  - r-cellranger=1.1.0=r351h6115d3f_1001
   - r-checkmate=1.9.1=r351h46e59ec_0
   - r-cli=1.1.0=r351h6115d3f_0
-  - r-cluster=2.0.8=r351haf69682_0
+  - r-clipr=0.6.0=r351h6115d3f_0
+  - r-cluster=2.0.7_1=r351h0b560c1_0
   - r-colorspace=1.4_1=r351h159158b_0
+  - r-cowplot=0.9.4=r351h6115d3f_0
   - r-crayon=1.3.4=r351h6115d3f_1001
   - r-curl=3.3=r351h46e59ec_0
   - r-data.table=1.12.0=r351h46e59ec_0
   - r-dbi=1.0.0=r351h6115d3f_1001
+  - r-dbplyr=1.2.2=r351hf348343_0
+  - r-dendextend=1.12.0=r351h6115d3f_0
   - r-devtools=1.13.6=r351hf348343_0
   - r-dichromat=2.0_0=r351_2000
   - r-digest=0.6.18=r351h46e59ec_1000
   - r-dplyr=0.7.6=r351h32998d9_0
+  - r-ellipse=0.4.1=r351h6115d3f_1001
+  - r-ellipsis=0.1.0=r351h46e59ec_0
   - r-evaluate=0.13=r351h6115d3f_1
+  - r-factoextra=1.0.5=r351_1001
+  - r-factominer=1.41=r351h6115d3f_1001
   - r-fail=1.3=r351_1000
   - r-fansi=0.4.0=r351h46e59ec_1000
+  - r-flashclust=1.01_2=r351hfffe0aa_1002
+  - r-forcats=0.4.0=r351h6115d3f_0
   - r-foreign=0.8_71=r351h46e59ec_1002
   - r-formatr=1.6=r351h6115d3f_0
   - r-formula=1.2_3=r351h6115d3f_1001
@@ -223,14 +238,19 @@ dependencies:
   - r-futile.options=1.0.1=r351h6115d3f_1000
   - r-gdata=2.18.0=r351h6115d3f_1001
   - r-getopt=1.20.3=r351_0
+  - r-ggfortify=0.4.7=r351h6115d3f_0
   - r-ggplot2=3.0.0=r351hf348343_0
+  - r-ggpubr=0.2=r351h6115d3f_1000
   - r-ggrepel=0.8.0=r351h466af19_1002
+  - r-ggsci=2.9=r351h6115d3f_1001
+  - r-ggsignif=0.5.0=r351h6115d3f_0
   - r-git2r=0.23.0=r351h6402f54_0
   - r-glue=1.3.1=r351h159158b_0
   - r-gplots=3.0.1.1=r351h6115d3f_0
   - r-gridextra=2.3=r351h6115d3f_1001
   - r-gtable=0.3.0=r351h6115d3f_0
   - r-gtools=3.8.1=r351h46e59ec_1002
+  - r-haven=2.1.0=r351h466af19_0
   - r-highr=0.8=r351h6115d3f_0
   - r-hmisc=4.1_1=r351hfffe0aa_1001
   - r-hms=0.4.2=r351h6115d3f_1000
@@ -240,6 +260,8 @@ dependencies:
   - r-httpuv=1.4.5=r351h32998d9_0
   - r-httr=1.4.0=r351h6115d3f_1000
   - r-hwriter=1.3.2=r351h6115d3f_1001
+  - r-irdisplay=0.5.0=r351hf348343_0
+  - r-irkernel=0.8.12=r351_0
   - r-jsonlite=1.6=r351h46e59ec_1000
   - r-kernsmooth=2.23_15=r351hfffe0aa_1002
   - r-knitr=1.20=r351hf348343_0
@@ -249,35 +271,53 @@ dependencies:
   - r-lattice=0.20_38=r351h46e59ec_1000
   - r-latticeextra=0.6_28=r351h6115d3f_1001
   - r-lazyeval=0.2.2=r351h159158b_0
+  - r-leaps=3.0=r351hfffe0aa_1002
+  - r-lme4=1.1_21=r351hf99fc2c_0
   - r-locfit=1.5_9.1=r351h1de35cc_1002
   - r-magrittr=1.5=r351h6115d3f_1001
+  - r-maptools=0.9_3=r351h46e59ec_1002
   - r-markdown=0.9=r351h46e59ec_1000
   - r-mass=7.3_51.3=r351h159158b_0
   - r-matrix=1.2_17=r351h159158b_0
+  - r-matrixmodels=0.4_1=r351h6115d3f_1001
   - r-matrixstats=0.54.0=r351h46e59ec_1000
   - r-memoise=1.1.0=r351h6115d3f_1001
   - r-mgcv=1.8_28=r351h159158b_0
   - r-mime=0.6=r351h46e59ec_1000
+  - r-minqa=1.2.4=r351hbe7ee20_1002
   - r-munsell=0.5.0=r351h6115d3f_1001
+  - r-nbclust=3.0=r351h6115d3f_1000
   - r-nlme=3.1_137=r351hfffe0aa_1000
+  - r-nloptr=1.2.1=r351h466af19_0
   - r-nnet=7.3_12=r351h46e59ec_1002
   - r-openssl=1.1=r351hd0de0e5_1001
+  - r-openxlsx=4.1.0=r351h466af19_1000
+  - r-pbdzmq=0.3_3=r351h32998d9_0
+  - r-pbkrtest=0.4_7=r351h6115d3f_1001
   - r-pheatmap=1.0.12=r351h6115d3f_0
   - r-pillar=1.3.1=r351h6115d3f_1000
   - r-pkgconfig=2.0.2=r351h6115d3f_1001
   - r-plogr=0.2.0=r351h6115d3f_1001
   - r-plyr=1.8.4=r351h466af19_1002
+  - r-polynom=1.3_9=r351h6115d3f_1001
   - r-prettyunits=1.0.2=r351h6115d3f_1001
   - r-progress=1.2.0=r351h6115d3f_1002
   - r-promises=1.0.1=r351h32998d9_0
   - r-ps=1.3.0=r351h46e59ec_1000
   - r-purrr=0.2.5=r351h6402f54_0
+  - r-quantreg=5.40=r35haf69682_0
   - r-r6=2.4.0=r351h6115d3f_0
   - r-rcolorbrewer=1.1_2=r351h6115d3f_1001
   - r-rcpp=1.0.1=r351hf99fc2c_0
   - r-rcpparmadillo=0.9.300.2.0=r351hf99fc2c_0
+  - r-rcppeigen=0.3.3.5.0=r351h466af19_0
   - r-rcurl=1.95_4.11=r351hc070d10_3
-  - r-reshape2=1.4.3=r351h466af19_1003
+  - r-readr=1.3.1=r351h466af19_1000
+  - r-readxl=1.3.1=r351hf99fc2c_0
+  - r-rematch=1.0.1=r351h6115d3f_1001
+  - r-repr=0.15.0=r351hf348343_0
+  - r-reshape2=1.4.3=r351h32998d9_0
+  - r-rio=0.5.16=r351h6115d3f_1000
   - r-rjson=0.2.20=r351h466af19_1000
   - r-rlang=0.3.3=r351h159158b_0
   - r-rocr=1.0_7=r351hf348343_4
@@ -285,16 +325,21 @@ dependencies:
   - r-rsqlite=2.1.1=r351h466af19_1000
   - r-rstudioapi=0.10=r351h6115d3f_0
   - r-scales=1.0.0=r351h466af19_1001
+  - r-scatterplot3d=0.3_41=r351h6115d3f_1000
   - r-sendmailr=1.2_1=r351h6115d3f_1001
   - r-shiny=1.1.0=r351hf348343_0
   - r-snow=0.4_3=r351h6115d3f_1000
   - r-sourcetools=0.1.7=r351h32998d9_0
+  - r-sp=1.3_1=r351h46e59ec_1000
+  - r-sparsem=1.77=r351hfffe0aa_1001
   - r-stringi=1.4.3=r351hf99fc2c_0
   - r-stringr=1.4.0=r351h6115d3f_0
   - r-survival=2.44_1.1=r351h159158b_0
   - r-tibble=2.1.1=r351h159158b_0
+  - r-tidyr=0.8.2=r351h466af19_1002
   - r-tidyselect=0.2.4=r351h32998d9_0
   - r-utf8=1.1.4=r351h46e59ec_1000
+  - r-uuid=0.1_2=r351h6402f54_4
   - r-viridis=0.5.1=r351h6115d3f_1001
   - r-viridislite=0.3.0=r351h6115d3f_1001
   - r-whisker=0.3_2=r351hf348343_4
@@ -303,8 +348,10 @@ dependencies:
   - r-xml=3.98_1.16=r351h46e59ec_1000
   - r-xtable=1.8_3=r351_2000
   - r-yaml=2.2.0=r351h46e59ec_1001
+  - r-zip=2.0.1=r351h159158b_0
   - readline=7.0=h1de35cc_5
   - rhash=1.3.6=hdbc3d79_0
+  - rpy2=2.9.1=py35r351h1d22016_0
   - scipy=1.1.0=py35h28f7352_1
   - send2trash=1.5.0=py35_0
   - service_identity=17.0.0=py35h28b3542_0
