--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@
 
 .idea/
 cmake-build-debug/
+Experiment_NB/Exp_conf_test/*
 Experiment_NB/Experiment_out
 Experiment_NB/Simulation_result
 .ipynb_checkpoints
