attempt at fixings deps

--- a/Conda-env/environment.yml
+++ b/Conda-env/environment.yml
@@ -1,104 +1,103 @@
 name: experiment_env
 channels:
+  - conda-forge/label/gcc7
   - bioconda
+  - anaconda
   - r
   - conda-forge
-  - anaconda
   - defaults
 dependencies:
-  - python=3.5.6
-  - bioconductor-annotate
-  - bioconductor-annotationdbi
-  - bioconductor-annotationforge
-  - bioconductor-biobase
-  - bioconductor-biocgenerics
-  - bioconductor-biocinstaller
-  - bioconductor-biocparallel
-  - bioconductor-biomart
-  - bioconductor-biostrings
-  - bioconductor-bsgenome
-  - bioconductor-category
-  - bioconductor-delayedarray
-  - bioconductor-deseq2
-  - bioconductor-diffbind
-  - bioconductor-edger
-  - bioconductor-genefilter
-  - bioconductor-geneplotter
-  - bioconductor-genomeinfodb
-  - bioconductor-genomeinfodbdata
-  - bioconductor-genomicalignments
-  - bioconductor-genomicfeatures
-  - bioconductor-genomicranges
-  - bioconductor-go.db
-  - bioconductor-gostats
-  - bioconductor-graph
-  - bioconductor-gseabase
-  - bioconductor-iranges
-  - bioconductor-limma
-  - bioconductor-rbgl
-  - bioconductor-rgraphviz
-  - bioconductor-roc
-  - bioconductor-rsamtools
-  - bioconductor-rtracklayer
-  - bioconductor-s4vectors
-  - bioconductor-shortread
-  - bioconductor-summarizedexperiment
-  - bioconductor-systempiper
-  - bioconductor-tximport
-  - bioconductor-variantannotation
-  - bioconductor-xvector
-  - bioconductor-zlibbioc
-  - cmake
-  - curl
-  - ipykernel
-  - ipython
-  - ipython_genutils
-  - ipywidgets
-  - jupyter
+  - bioconductor-annotate=1.60.0
+  - bioconductor-annotationdbi=1.44.0
+  - bioconductor-annotationforge=1.24.0
+  - bioconductor-biobase=2.42.0
+  - bioconductor-biocgenerics=0.28.0
+  - bioconductor-biocinstaller=1.32.1
+  - bioconductor-biocparallel=1.16.2
+  - bioconductor-biomart=2.38.0
+  - bioconductor-biostrings=2.50.2
+  - bioconductor-bsgenome=1.50.0
+  - bioconductor-category=2.48.0
+  - bioconductor-delayedarray=0.8.0
+  - bioconductor-deseq2=1.22.1
+  - bioconductor-diffbind=2.10.0
+  - bioconductor-edger=3.24.1
+  - bioconductor-genefilter=1.64.0
+  - bioconductor-geneplotter=1.60.0
+  - bioconductor-genomeinfodb=1.18.1
+  - bioconductor-genomeinfodbdata=1.2.0
+  - bioconductor-genomicalignments=1.18.1
+  - bioconductor-genomicfeatures=1.34.1
+  - bioconductor-genomicranges=1.34.0
+  - bioconductor-go.db=3.7.0
+  - bioconductor-gostats=2.48.0
+  - bioconductor-graph=1.60.0
+  - bioconductor-gseabase=1.44.0
+  - bioconductor-iranges=2.16.0
+  - bioconductor-limma=3.38.3
+  - bioconductor-rbgl=1.58.1
+  - bioconductor-rgraphviz=2.26.0
+  - bioconductor-roc=1.58.0
+  - bioconductor-rsamtools=1.34.0
+  - bioconductor-rtracklayer=1.42.1
+  - bioconductor-s4vectors=0.20.1
+  - bioconductor-shortread=1.40.0
+  - bioconductor-summarizedexperiment=1.12.0
+  - bioconductor-systempiper=1.16.0
+  - bioconductor-tximport=1.10.0
+  - bioconductor-variantannotation=1.28.3
+  - bioconductor-xvector=0.22.0
+  - bioconductor-zlibbioc=1.28.0
+  - cmake=3.12.2
+  - curl=7.61.1
+  - ipykernel=4.10.0
+  - ipython=6.5.0
+  - ipython_genutils=0.2.0
+  - ipywidgets=7.4.1
+  - jupyter=1.0.0
   - llvm
-  - llvmdev
-  - numpy
-  - pandas
-  - qt
-  - r-zeallot
-  - r-vctrs
-  - r-colorspace
-  - r-cowplot
-  - r-devtools
-  - r-dplyr
-  - r-ellipse
-  - r-factoextra
-  - r-formatr
-  - r-formula
-  - r-ggfortify
-  - r-ggplot2
-  - r-ggpubr
-  - r-gplots
-  - r-gridextra
-  - r-gtable
-  - r-httpuv
-  - r-irkernel
-  - r-knitr
-  - r-lattice
-  - r-leaps
-  - r-locfit
-  - r-markdown
-  - r-nbclust
-  - r-openssl
-  - r-pkgconfig
-  - r-purrr
-  - r-rcolorbrewer
-  - r-rcurl
-  - r-reshape2
-  - r-rjson
-  - r-rocr
-  - r-shiny
-  - r-stringi
-  - r-stringr
-  - r-tibble
-  - r-tidyr
-  - rpy2
-  - scipy
-  - tensorboard
-  - tensorflow=1.9
-  - wget
+  - llvmdev=8.0.0
+  - numpy=1.15.2
+  - pandas=0.23.4
+  - python=3.5.6
+  - qt=5.6.2
+  - r-colorspace=1.4_1
+  - r-cowplot=0.9.4
+  - r-devtools=1.13.6
+  - r-dplyr=0.7.6
+  - r-ellipse=0.4.1
+  - r-factoextra=1.0.5
+  - r-formatr=1.6
+  - r-formula=1.2_3
+  - r-ggfortify=0.4.7
+  - r-ggplot2=3.0.0
+  - r-ggpubr=0.2
+  - r-gplots=3.0.1.1
+  - r-gridextra=2.3
+  - r-gtable=0.3.0
+  - r-httpuv=1.4.5
+  - r-irkernel=0.8.12
+  - r-knitr=1.20
+  - r-lattice=0.20_38
+  - r-leaps=3.0
+  - r-locfit=1.5_9.1
+  - r-markdown=0.9
+  - r-nbclust=3.0
+  - r-openssl=1.1
+  - r-pkgconfig=2.0.2
+  - r-purrr=0.2.5
+  - r-rcolorbrewer=1.1_2
+  - r-rcurl=1.95_4.11
+  - r-reshape2=1.4.3
+  - r-rjson=0.2.20
+  - r-rocr=1.0_7
+  - r-shiny=1.1.0
+  - r-stringi=1.4.3
+  - r-stringr=1.4.0
+  - r-tibble=2.1.1
+  - r-tidyr=0.8.2
+  - rpy2=2.9.1
+  - scipy=1.1.0
+  - tensorboard=1.10.0
+  - tensorflow=1.10.0
+  - wget=1.19.5
